<resources>
    <string name="app_name">My First Application</string>
    <string name="choose_what_to_allow_app_to_access">Choose what to allow APP to access</string>
    <string name="phone">Phone</string>
    <string name="camara">Camara</string>
    <string name="contacts">Contacts</string>
    <string name="take_pictures_and_record_video">take pictures and record video</string>
    <string name="access_your_contacts">access your contacts</string>
    <string name="access_this_device_s_location">access this device\'s location</string>
    <string name="access_photos_media_and_files_on_your_device">access photos, media, and files on your device</string>
    <string name="storage">Storage</string>
    <string name="make_and_manage_phone_calls">make and manage phone calls</string>
    <string name="location">Location</string>
    <string name="continueB">CONTINUE</string>
    <string name="cancel">CANCEL</string>
</resources>