<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#610d69"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/permission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/choose_what_to_allow_app_to_access"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#08a3d0"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/storage"
        android:textSize="16sp"
        android:textColor="#08a3d0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission" />

    <TextView
        android:id="@+id/storageAccess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/access_photos_media_and_files_on_your_device"
        android:textSize="12sp"
        android:textColor="#08a3d0"
        app:layout_constraintBottom_toBottomOf="@+id/switch_storage"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storage"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/permission"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textSize="16sp"
        android:textColor="#08a3d0"
        app:layout_constraintStart_toStartOf="@+id/storageAccess"
        app:layout_constraintTop_toBottomOf="@+id/storageAccess" />

    <TextView
        android:id="@+id/locationAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_this_device_s_location"
        android:textSize="12sp"
        android:textColor="#08a3d0"
        app:layout_constraintBottom_toBottomOf="@+id/switch_location"
        app:layout_constraintStart_toStartOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/camara"
        android:textSize="16sp"
        android:textColor="#08a3d0"
        app:layout_constraintStart_toStartOf="@+id/locationAccess"
        app:layout_constraintTop_toBottomOf="@+id/locationAccess" />

    <TextView
        android:id="@+id/camaraAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_pictures_and_record_video"
        android:textSize="12sp"
        android:textColor="#08a3d0"
        app:layout_constraintBottom_toBottomOf="@+id/switch_camara"
        app:layout_constraintStart_toStartOf="@+id/camara"
        app:layout_constraintTop_toBottomOf="@+id/camara"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        android:textSize="16sp"
        android:textColor="#08a3d0"
        app:layout_constraintStart_toStartOf="@+id/camaraAccess"
        app:layout_constraintTop_toBottomOf="@+id/camaraAccess" />

    <TextView
        android:id="@+id/phoneAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_and_manage_phone_calls"
        android:textSize="12sp"
        android:textColor="#08a3d0"
        app:layout_constraintBottom_toBottomOf="@+id/switch_phone"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contacts"
        android:textSize="16sp"
        android:textColor="#08a3d0"
        app:layout_constraintStart_toStartOf="@+id/phoneAccess"
        app:layout_constraintTop_toBottomOf="@+id/phoneAccess" />

    <TextView
        android:id="@+id/contactsAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_your_contacts"
        android:textSize="12sp"
        android:textColor="#08a3d0"
        app:layout_constraintBottom_toBottomOf="@+id/switch_contacts"
        app:layout_constraintStart_toStartOf="@+id/contacts"
        app:layout_constraintTop_toBottomOf="@+id/contacts"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/switch_storage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/switch_storage"
        app:layout_constraintTop_toBottomOf="@+id/switch_storage" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/switch_location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/switch_location"
        app:layout_constraintTop_toBottomOf="@+id/switch_location" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/switch_camara"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/switch_camara"
        app:layout_constraintTop_toBottomOf="@+id/switch_camara" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/switch_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/switch_phone"
        app:layout_constraintTop_toBottomOf="@+id/switch_phone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="341dp" />

    <Button
        android:id="@+id/continueB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/continueB"
        android:background="#610d69"
        app:backgroundTint="@null"
        android:textColor="#0addcd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        android:background="#610d69"
        app:backgroundTint="@null"
        android:textColor="#0addcd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/continueB" />


</androidx.constraintlayout.widget.ConstraintLayout>